Fix position of 'FILTER' button (<FiltersBar2>) on small screens

--- a/src/components/FiltersBar2/filtersBar2.module.scss
+++ b/src/components/FiltersBar2/filtersBar2.module.scss
@@ -147,4 +147,8 @@
   position: absolute;
   transform: translateX(-50%);
   z-index: 2;
+
+  @include responsiveDesign(1000) {
+    bottom: -6%;
+  }
 }
